# audio_service_project

./: .gitignore  dashboard.json  ddl.sql  docker-compose.yaml  init-kafka-topics.sh  prometheus.yml  readme.md
analytics/etl5/: Makefile  README.md  connector-config.json  docker-compose.yml  events.proto  ex.py  pyproject.toml  requirements.txt
analytics/etl5/clickhouse-init/: init.sql
analytics/etl5/dashboard_export_20250602T213451/: metadata.yaml
analytics/etl5/dashboard_export_20250602T213451/charts/: 10.yaml  11.yaml  13.yaml  6.yaml  7.yaml  8.yaml  9.yaml  DAU_12.yaml
analytics/etl5/dashboard_export_20250602T213451/dashboards/: 2.yaml
analytics/etl5/dashboard_export_20250602T213451/databases/: ClickHouse_Connect_Superset.yaml
analytics/etl5/postgres-init/: init.sql
analytics/etl5/spark-app/: main.py
audio_streaming_service/: Makefile  (+2 more)
elastic_search_service/: Makefile  main.py  pyproject.toml
elastic_search_service/src/applications/: models.py
elastic_search_service/src/applications/decorators/: cache.py
elastic_search_service/src/applications/use_cases/: search_tracks.py
elastic_search_service/src/core/: config.py  di.py  exceptions.py  logger.py
elastic_search_service/src/domain/cache/: cache_repository.py  serialization.py
elastic_search_service/src/domain/elastic_search/: models.py  repository.py
elastic_search_service/src/domain/events/: events.py  handlers.py  publisher.py  use_case.py
elastic_search_service/src/infrastructure/cache/: redis_client.py  redis_repository.py  serialization.py
elastic_search_service/src/infrastructure/elastic/: client.py  elastic_repository.py
elastic_search_service/src/infrastructure/grpc/: server.py
elastic_search_service/src/scripts/: sync_tracks_to_elastic.py
gateway/: Dockerfile  Makefile  description.txt  main.py  pyproject.toml
gateway/grpc_clients/: user.py
gateway/src/: main.py
gateway/src/api/: metrics.py
gateway/src/api/v1/: auth.py  likes.py  playlists.py  streaming.py  tracks.py  users.py
gateway/src/core/: config.py  container.py  jwt_utils.py  kafka_producer.py  monitoring.py  password_utils.py
gateway/src/core/dependencies/: grpc_clients.py
gateway/src/core/middleware/: auth.py  metrics.py
gateway/src/grpc_clients/: user_client.py
gateway/src/protos/listening_history_context/: LikeCommands.proto
gateway/src/protos/user_context/: PlaylistCommands.proto  commands.proto  track.proto  track_search.proto
gateway/src/schemas/: playlist.py  track.py  user.py
gateway/src/services/: client.py  music_catalog_service.py  playlist_service.py  user_service.py
gateway/templates/: player.html
user_service (User Profile Context)/: Dockerfile  Makefile  main.py  pyproject.toml  requirements.txt
user_service (User Profile Context)/src/applications/decorators/: cache.py
user_service (User Profile Context)/src/applications/use_cases/: auth_user.py  change_password.py  delete_user.py  get_user_info.py  register_user.py
user_service (User Profile Context)/src/core/: config.py  di.py  exceptions.py  logger.py  serialization.py
user_service (User Profile Context)/src/core/protos/: commands.proto  events.proto
user_service (User Profile Context)/src/domain/events/: events.py  publisher.py  readme.md
user_service (User Profile Context)/src/domain/users/: models.py  repository.py  services.py
user_service (User Profile Context)/src/infrastructure/cache/: redis_repository.py  serialization.py  user_serializer.py
user_service (User Profile Context)/src/infrastructure/database/: models.py
user_service (User Profile Context)/src/infrastructure/events/: converters.py
(+184 files in other folders)
