
[tool.poetry]
name = "gateway"
version = "0.1.0"
description = "API Gateway for audio service project"
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "core", from = "src" },
    { include = "api", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
kafka-python = "^2.2.4"
fastapi = "^0.113.0"
uvicorn = "^0.22.0"
dependency-injector = "^4.41.0"
python-dotenv = "^1.0.0"


grpcio = "^1.71.0"
grpcio-tools = "^1.71.0"
pydantic-settings = "^2.9.1"
loguru = "^0.7.3"
httpx = "^0.28.1"
faststream = {extras = ["kafka"], version = "^0.5.39"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
