[tool.poetry]
name = "gateway"
version = "0.1.0"
description = ""
authors = ["karseny99 <arseny.karimov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.9.1"
loguru = "^0.7.3"
httpx = "^0.28.1"
faststream = {extras = ["kafka"], version = "^0.5.39"}
grpcio = "^1.71.0"
grpcio-tools = "^1.71.0"
fastapi = "^0.115.12"
jwt = "^1.3.1"
dependency-injector = "^4.46.0"
pydantic = {extras = ["email"], version = "^2.11.4"}
uvicorn = "^0.34.2"
pyjwt = "^2.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
