[tool.poetry]
name = "user_service (user profile context)"
version = "0.1.0"
description = ""
authors = ["karseny99 <arseny.karimov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
CacheControl = "^0.14.3"
urllib3 = "^2.4.0"
bcrypt = "^4.3.0"
grpcio = "^1.72.0"
grpcio-tools = "^1.72.0"
SQLAlchemy = "2.0.40"
pydantic-settings = "^2.9.1"
asyncpg = "^0.30.0"
faststream = {extras = ["kafka"], version = "^0.5.39"}
dependency-injector = "^4.46.0"
pyjwt = "^2.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
