[tool.poetry]
name = "etl5"
version = "0.1.0"
description = ""
authors = ["1"]
license = "123"

[tool.poetry.dependencies]
python = "^3.10"
grpcio = "^1.72.0"
grpcio-tools = "^1.72.0"
faststream = {extras = ["kafka"], version = "^0.5.42"}
psycopg2-binary = "^2.9.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
